ACTIN-68: Final PR feedback